# simple-raymarcher

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  vendor.yml
Config/: config.yaml
Shaders/: fragment.frag  vertex.vert
Source/: Application.cpp  Application.h  ByteColor.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ConfigManager.cpp  ConfigManager.h  Constants.h  ImageBuffer.cpp  ImageBuffer.h  Light.cpp  Light.h  Material.h  PixelBufferBase.h  Pixel_Stream_Base.h  Raymarcher.cpp  Raymarcher.h  Scene.cpp  Scene.h  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h  Screen_Stream.cpp  Screen_Stream.h  main.cpp
Source/Geometry/: Box.cpp  Box.h  Intersection.cpp  Intersection.h  Menger.cpp  Menger.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  SceneObject.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vec3f.cpp  Vec3f.h  Vec4f.cpp  Vec4f.h
Source/Includes/: GetGL.h  glad.c
Source/Includes/glad/: glad.c  glad.h
Source/Lighting/: DirectionalLight.cpp  DirectionalLight.h  LightBase.cpp  LightBase.h  PointLight.cpp  PointLight.h
Source/Util/: NonCopyable.h  Shader.cpp  Shader.h
cmake/: FindGLFW.cmake  FindOpenGL.cmake  FindYamlCpp.cmake  SelectLibraryConfigurations.cmake
